--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ language: cpp
 sudo: required
 dist: trusty
 compiler:
-- clang
+#- clang
 - gcc
 os:
 - osx
+#- linux
 before_install:
 - echo $LANG
 - echo $LC_ALL
 - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get update && sudo apt-get install libsfml-dev; fi
-- if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install eigen tbb; fi
+#- if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install eigen tbb; fi
+- if [ $TRAVIS_OS_NAME == osx ]; then brew install eigen tbb; fi
 script:
 # g++ -ltbb -I"/wherever/eigen/is/located" main.cpp bowyer_watson.cpp
 - g++ -ltbb -I/usr/local/Cellar/eigen/3.3.4 main.cpp bowyer_watson.cpp
